Picklist WIP: remove bug from previous commit
The previous commit demonstrated the bug that happens when the parent
element has no border; this commit gives the parent element a border to
remove the bug. For aesthetic reasons, the border of the parent element
is the same size as the background it's standing against, so it will be
invisible to the user. But if the parent element doesn't have a 1-pixel
solid border, the bug shows up again and dragging elements isn't smooth.


Former-commit-id: fa9e4e1357968f390922042c2bc3f0b291572c9d

--- a/src/angular-app/bellows/css/picklist-editor.css
+++ b/src/angular-app/bellows/css/picklist-editor.css
@@ -17,6 +17,7 @@
 .ng-repeat-reorder-parent {
 	z-index: 10;
 	position: relative;
+	border: 1px solid #f5f5f5; /* Same color as background so it's "invisible"... but it needs to be 1px solid, else bugs happen. */
 }
 
 .active-drag-below {
